# OpenGL_project

./: README.md
OpenGL_start/: OpenGL_start.sln
OpenGL_start/Debug/: OpenGL_start.ilk
OpenGL_start/OpenGL_start/: OpenGL_start.vcxproj  OpenGL_start.vcxproj.filters
OpenGL_start/OpenGL_start/Debug/: OpenGL_start.exe.recipe  main.obj.enc  vc142.idb
OpenGL_start/OpenGL_start/Debug/OpenGL_start.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL_start.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL_start/OpenGL_start/Source/: Main.cpp  Material.h  Mesh.h  Primitives.h  Scene.h  Shader.h  Texture.h  Vertex.h  fragment_core.txt  glad.c  libs.h  vertex_core.txt
OpenGL_start/OpenGL_start/x64/Debug/: OpenGL_start.exe.recipe  vc142.idb
OpenGL_start/x64/Debug/: OpenGL_start.ilk
OpenGL_task/CG_project/: CG_project.sln
OpenGL_task/CG_project/CG_project/: CG_project.vcxproj  CG_project.vcxproj.filters  CMakeLists.txt  glfwwin.h  main.cpp  models.h  my_stb.h  renders.h  shaders.h
OpenGL_task/CG_project/CG_project/Debug/: CG_project.exe.recipe  vc142.idb
OpenGL_task/CG_project/CG_project/Debug/CG_project.tlog/: CG_project.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL_task/CG_project/CG_project/Source/shaders/: cb_light_f.c  cb_light_v.c  mirror_cube_f.c  skybox_f.c  skybox_v.c
OpenGL_task/CG_project/CG_project/shaders/: cubes_f.c  cubes_shadow_f.c  cubes_v.c  post_effect_f.c
OpenGL_task/CG_project/Debug/: CG_project.ilk
(+8 files in other folders)
